# learn_pthread

./: CMakeLists.txt  README.md
1-simple_routie/: main_simple  main_simple.c  my_routine.c  my_routine.h
2_exo_bulletin_vote/: a.out  fill_bulletin.c  main  main.c  main_exo_bulletin_vote.c  main_exo_bulletin_vote.h  print_color.c  urne.c  utility.c
2_exo_ressource_allocateur/: exo_ressource_allocator  exo_ressource_allocator.c
3_Annal_prodConso_Barriere/: main  main.c  prod_conso.c  prod_conso.h
3_exo_producteur_consommateur/: a.out  main.c  prod_conso.c  prod_conso.h
4_learn_semaphore/: a.out  main.c
